some changes done

--- a/index.html
+++ b/index.html
@@ -62,22 +62,16 @@
 
       <div class="card">
         <h2 style="margin:0 0 10px;">Прозрачность</h2>
-        <p class="small">Кто сделал сайт: <b>ТВОЁ ИМЯ / ник</b> (не фонд).<br/>
-          Контакт: <b>почта/телеграм</b> (по желанию).</p>
+        <p class="small">Кто сделал сайт: <b>by256 / ebanijnavoz</b> (не фонд).<br/>
+          Контакт: <b>testmail@mail.com/tg</b></p>
 
         <div class="hr"></div>
         <h3 style="margin:0 0 8px;">Важно</h3>
         <p class="small">
-          Не обещай “100% уйдёт детям” или “вылечим рак за донаты” — это неправда и юридически опасно.
-          Пиши нейтрально: “поддержка программ медицинской помощи”.
+          “100% уйдёт детям” или “вылечим рак за донаты” .
         </p>
 
-        <div class="hr"></div>
-        <h3 style="margin:0 0 8px;">Если хочешь принимать донаты на сайте</h3>
-        <p class="small">
-          Тогда нужна регистрация юрлица/НКО, политика конфиденциальности, условия, налоговые моменты и платёжный провайдер.
-          Для школьного/учебного проекта лучше делать вариант-перенаправление.
-        </p>
+        
       </div>
     </div>
   </div>
