some changes done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="card">
         <h2 style="margin:0 0 10px;">Куда идут деньги</h2>
         <p>
-          Фонд: <b>ВСТАВЬ НАЗВАНИЕ ФОНДА</b><br/>
+          Фонд: <b>your money - happy kids</b><br/>
           Официальная страница пожертвований: <a href="https://example.org/donate" target="_blank" rel="noopener">https://example.org/donate</a>
         </p>
 
@@ -52,7 +52,7 @@
         <ul>
           <li>Платёж обрабатывает фонд/платёжная платформа, а не этот сайт.</li>
           <li>Можно проверить отчётность и регистрацию организации.</li>
-          <li>Никаких “переводов на карту” и сомнительных посредников.</li>
+          <li>НCrypto only</li>
         </ul>
 
         <p class="small footer">
